--- a/TestSetupGenerator/TestSetupGenerator.XUnit.Moq.Vsix/TestSetupGenerator.XUnit.Moq.Vsix.csproj
+++ b/TestSetupGenerator/TestSetupGenerator.XUnit.Moq.Vsix/TestSetupGenerator.XUnit.Moq.Vsix.csproj
@@ -17,7 +17,7 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectTypeGuids>{82b43b9b-a64c-4715-b499-d71e9ca2bd60};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <ProjectGuid>{65291A41-C575-49E3-BFF8-F111949B4429}</ProjectGuid>
+    <ProjectGuid>{2D58FC58-4E46-4D2D-9965-F456B51DD695}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>TestSetupGenerator.Vsix</RootNamespace>
@@ -59,9 +59,15 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\TestSetupGenerator\TestSetupGenerator.csproj">
+    <ProjectReference Include="..\TestSetupGenerator.XUnit.Moq\TestSetupGeneratorXUnit.Moq.csproj">
+      <Project>{8182194A-629B-4163-8806-1F2BAA0A0605}</Project>
+      <Name>TestSetupGeneratorXUnit.Moq</Name>
+      <IncludeOutputGroupsInVSIX>BuiltProjectOutputGroup%3bBuiltProjectOutputGroupDependencies%3bGetCopyToOutputDirectoryItems%3bSatelliteDllsProjectOutputGroup%3b</IncludeOutputGroupsInVSIX>
+      <IncludeOutputGroupsInVSIXLocalOnly>DebugSymbolsProjectOutputGroup%3b</IncludeOutputGroupsInVSIXLocalOnly>
+    </ProjectReference>
+    <ProjectReference Include="..\TestSetupGenerator\TestSetupGenerator.NUnit.Rhino.csproj">
       <Project>{CAD27EA5-ABF8-421E-81DD-04C423AE92E1}</Project>
-      <Name>TestSetupGenerator</Name>
+      <Name>TestSetupGenerator.NUnit.Rhino</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
