--- a/TestSetupGenerator/TestSetupGenerator.NUnit.RhinoMocks/TestSetupGenerator.NUnit.Rhino.csproj
+++ b/TestSetupGenerator/TestSetupGenerator.NUnit.RhinoMocks/TestSetupGenerator.NUnit.Rhino.csproj
@@ -10,8 +10,8 @@
     <ProjectGuid>{CAD27EA5-ABF8-421E-81DD-04C423AE92E1}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TestSetupGenerator</RootNamespace>
-    <AssemblyName>TestSetupGenerator</AssemblyName>
+    <RootNamespace>TestSetupGenerator.NUnit.Rhino</RootNamespace>
+    <AssemblyName>TestSetupGenerator.NUnit.Rhino</AssemblyName>
     <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <TargetFrameworkProfile>Profile7</TargetFrameworkProfile>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
