--- a/TestSetupGenerator/TestSetupGenerator.XUnit.Moq.Vsix/TestSetupGenerator.XUnit.Moq.Vsix.csproj
+++ b/TestSetupGenerator/TestSetupGenerator.XUnit.Moq.Vsix/TestSetupGenerator.XUnit.Moq.Vsix.csproj
@@ -65,7 +65,7 @@
       <IncludeOutputGroupsInVSIX>BuiltProjectOutputGroup%3bBuiltProjectOutputGroupDependencies%3bGetCopyToOutputDirectoryItems%3bSatelliteDllsProjectOutputGroup%3b</IncludeOutputGroupsInVSIX>
       <IncludeOutputGroupsInVSIXLocalOnly>DebugSymbolsProjectOutputGroup%3b</IncludeOutputGroupsInVSIXLocalOnly>
     </ProjectReference>
-    <ProjectReference Include="..\TestSetupGenerator\TestSetupGenerator.NUnit.Rhino.csproj">
+    <ProjectReference Include="..\TestSetupGenerator.NUnit.RhinoMocks\TestSetupGenerator.NUnit.Rhino.csproj">
       <Project>{CAD27EA5-ABF8-421E-81DD-04C423AE92E1}</Project>
       <Name>TestSetupGenerator.NUnit.Rhino</Name>
     </ProjectReference>
