--- a/common/TestSetupGenerator.CodeAnalysis.UnitTests/TestSetupGenerator.CodeAnalysis.UnitTests.csproj
+++ b/common/TestSetupGenerator.CodeAnalysis.UnitTests/TestSetupGenerator.CodeAnalysis.UnitTests.csproj
@@ -182,6 +182,7 @@
     <Compile Include="CodeAnalyzers\ClassUnderTestFinderTests.cs" />
     <Compile Include="CodeAnalyzers\ClassUnderTestNameFinderTests.cs" />
     <Compile Include="CodeAnalyzers\ConstructorParametersExtractorTests.cs" />
+    <Compile Include="CodeAnalyzers\FieldNameGeneratorTests.cs" />
     <Compile Include="CodeGenerators\ConstructorGeneratorTests.cs" />
     <Compile Include="CodeGenerators\ExpressionStatementGeneratorTests_MoqStub.cs" />
     <Compile Include="CodeGenerators\ExpressionStatementGeneratorTests_MockRepositoryGenerateStub.cs" />
@@ -191,13 +192,10 @@
     <Compile Include="CodeGenerators\MethodGeneratorTests_GenerateMethodWithAttribute.cs" />
     <Compile Include="CodeGenerators\UsingDirectorsGeneratorTests.cs" />
     <EmbeddedResource Include="files\ConstructorGenerator_DocumentWithTwoClasses.txt" />
-    <Compile Include="Helpers\RoslynStubProviders\ClassDeclarationProvider.cs" />
     <Compile Include="Helpers\RoslynStubProviders\DocumentProvider.cs" />
     <Compile Include="Helpers\ExtensionMethods\StringExtensions.cs" />
     <Compile Include="Helpers\IO\TextFileReader.cs" />
-    <Compile Include="Helpers\RoslynStubProviders\FieldDeclarationsProvider.cs" />
     <Compile Include="Helpers\RoslynStubProviders\SyntaxNodeProvider.cs" />
-    <Compile Include="Helpers\RoslynStubProviders\TypeSyntaxProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Helpers\RoslynStubProviders\SyntaxGeneratorProvider.cs" />
   </ItemGroup>
@@ -230,6 +228,9 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="files\ConstructorGenerator_DocumentWithOneClassAndVariables.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="files\FieldNameGenerator_MultipleParameters.txt" />
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
