--- a/targets/TestSetupGenerator.XUnitMoq/TestSetupGenerator.XUnitMoq/TestSetupGenerator.XUnitMoq.csproj
+++ b/targets/TestSetupGenerator.XUnitMoq/TestSetupGenerator.XUnitMoq/TestSetupGenerator.XUnitMoq.csproj
@@ -33,6 +33,7 @@
   
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="2.7.0" />
+    <PackageReference Include="SimpleInjector" Version="4.3.0" />
   </ItemGroup>
   
   <ItemGroup>
