--- a/targets/TestSetupGenerator.UnitTests/TestSetupGenerator.UnitTests.csproj
+++ b/targets/TestSetupGenerator.UnitTests/TestSetupGenerator.UnitTests.csproj
@@ -5,11 +5,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6A2E5286-3FA5-4727-8C83-CEA6C76B53AA}</ProjectGuid>
+    <ProjectGuid>{CEF214CA-D828-44F8-9131-B42D74D5687B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TestSetupGenerator.CodeAnalysis.UnitTests</RootNamespace>
-    <AssemblyName>TestSetupGenerator.CodeAnalysis.UnitTests</AssemblyName>
+    <RootNamespace>TestSetupGenerator.UnitTests</RootNamespace>
+    <AssemblyName>TestSetupGenerator.UnitTests</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -65,6 +65,9 @@
     </Reference>
     <Reference Include="Moq, Version=4.9.0.0, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Moq.4.9.0\lib\net45\Moq.dll</HintPath>
+    </Reference>
+    <Reference Include="SimpleInjector, Version=4.3.0.0, Culture=neutral, PublicKeyToken=984cb50dea722e99, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\SimpleInjector.4.3.0\lib\net45\SimpleInjector.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.AppContext, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
@@ -184,40 +187,18 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CodeAnalyzers\ClassUnderTestFinderTests.cs" />
-    <Compile Include="CodeAnalyzers\ClassUnderTestNameFinderTests.cs" />
-    <Compile Include="CodeAnalyzers\ConstructorParametersExtractorTests.cs" />
-    <Compile Include="CodeAnalyzers\FieldNameGeneratorTests.cs" />
-    <Compile Include="CodeAnalyzers\MemberFinderTests.cs" />
-    <Compile Include="CodeAnalyzers\TestClassDetectorTests.cs" />
-    <Compile Include="CodeGenerators\ConstructorGeneratorTests.cs" />
-    <Compile Include="CodeGenerators\ExpressionStatementGeneratorTests_MoqStub.cs" />
-    <Compile Include="CodeGenerators\ExpressionStatementGeneratorTests_MockRepositoryGenerateStub.cs" />
-    <Compile Include="CodeGenerators\ExpressionStatementGeneratorTests_TargetObjectAssignmentExpression.cs" />
-    <Compile Include="CodeGenerators\FieldDeclarationGeneratorTests_GetFieldDeclaration.cs" />
-    <Compile Include="CodeGenerators\FieldDeclarationGeneratorTests_GetGenericFieldDeclarations.cs" />
-    <Compile Include="CodeGenerators\FieldNameGeneratorTests.cs" />
-    <Compile Include="DocumentBuilderTests\DocumentBuilderTests_WithSetupMethod.cs" />
-    <Compile Include="MemberReplacerTests\ReplaceOrInsertMemberTests.cs" />
-    <Compile Include="CodeGenerators\MethodGeneratorTests_GenerateMethodWithAttribute.cs" />
-    <Compile Include="CodeGenerators\UsingDirectivesGeneratorTests.cs" />
-    <EmbeddedResource Include="files\ConstructorGenerator_DocumentWithTwoClasses.txt" />
-    <Compile Include="Helpers\RoslynStubProviders\DocumentProvider.cs" />
     <Compile Include="Helpers\ExtensionMethods\StringExtensions.cs" />
     <Compile Include="Helpers\IO\TextFileReader.cs" />
-    <Compile Include="Helpers\RoslynStubProviders\SyntaxNodeProvider.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Helpers\RoslynStubProviders\DocumentProvider.cs" />
     <Compile Include="Helpers\RoslynStubProviders\SyntaxGeneratorProvider.cs" />
+    <Compile Include="Helpers\RoslynStubProviders\SyntaxNodeProvider.cs" />
+    <Compile Include="IoCConfigTests.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="XUnitSetupGeneratorTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\TestSetupGenerator.CodeAnalysis\TestSetupGenerator.CodeAnalysis.csproj">
-      <Project>{326c76bf-c1a4-47ff-93a6-3e805139c0b5}</Project>
-      <Name>TestSetupGenerator.CodeAnalysis</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Analyzer Include="..\..\packages\Microsoft.CodeAnalysis.Analyzers.1.1.0\analyzers\dotnet\cs\Microsoft.CodeAnalysis.Analyzers.dll" />
@@ -225,58 +206,26 @@
     <Analyzer Include="..\..\packages\xunit.analyzers.0.7.0\analyzers\dotnet\cs\xunit.analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="files\Class_WithConstructorWithTwoParameters.txt" />
+    <ProjectReference Include="..\..\common\TestSetupGenerator.CodeAnalysis\TestSetupGenerator.CodeAnalysis.csproj">
+      <Project>{326C76BF-C1A4-47FF-93A6-3E805139C0B5}</Project>
+      <Name>TestSetupGenerator.CodeAnalysis</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TestSetupGenerator.XUnitMoq\TestSetupGenerator.XUnitMoq\TestSetupGenerator.XUnitMoq.csproj">
+      <Project>{8ce6a731-f52e-4408-8698-974983b71b45}</Project>
+      <Name>TestSetupGenerator.XUnitMoq</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="files\Class_WithUnitTestsForClassWithParameters.txt" />
+    <EmbeddedResource Include="files\TestClass_NoSetupConstructor.txt" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="files\ClassUnderTest_And_TestClass.txt" />
+    <EmbeddedResource Include="files\ClassUnderTest.txt" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="files\ClassUnderTestFinderTests_WithMultipleClasses.txt" />
+    <EmbeddedResource Include="files\TestClass_WithSetupConstructor.txt" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="files\ConstructorGenerator_DocumentWithOneClassAndVariables.txt" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="files\FieldNameGenerator_MultipleParameters.txt" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="MemberReplacerTests\files\SampleMethod.txt" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="MemberReplacerTests\files\EmptyTestClass.txt" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="MemberReplacerTests\files\TestClassWithSampleMethod.txt" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="MemberReplacerTests\files\TestClassWithConstructor.txt" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="MemberReplacerTests\files\Constructor.txt" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="CodeAnalyzers\files\Class_WithConstructorWithTwoParameters.txt" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="CodeAnalyzers\files\Class_WithSampleMethod.txt" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="DocumentBuilderTests\files\Constructor.txt" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="DocumentBuilderTests\files\EmptyTestClass.txt" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="DocumentBuilderTests\files\SampleMethod.txt" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="DocumentBuilderTests\files\TestClassWithConstructor.txt" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="DocumentBuilderTests\files\TestClassWithSampleMethod.txt" />
+    <EmbeddedResource Include="files\TestClass_WithFinalSetupConstructor.txt" />
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
