--- a/common/TestSetupGenerator.CodeAnalysis.UnitTests/TestSetupGenerator.CodeAnalysis.UnitTests.csproj
+++ b/common/TestSetupGenerator.CodeAnalysis.UnitTests/TestSetupGenerator.CodeAnalysis.UnitTests.csproj
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="..\..\packages\xunit.core.2.3.1\build\xunit.core.props" Condition="Exists('..\..\packages\xunit.core.2.3.1\build\xunit.core.props')" />
+  <Import Project="..\..\packages\xunit.core.2.4.1\build\xunit.core.props" Condition="Exists('..\..\packages\xunit.core.2.4.1\build\xunit.core.props')" />
+  <Import Project="..\..\packages\xunit.runner.console.2.4.1\build\xunit.runner.console.props" Condition="Exists('..\..\packages\xunit.runner.console.2.4.1\build\xunit.runner.console.props')" />
   <Import Project="..\..\packages\MSTest.TestAdapter.1.2.0\build\net45\MSTest.TestAdapter.props" Condition="Exists('..\..\packages\MSTest.TestAdapter.1.2.0\build\net45\MSTest.TestAdapter.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -171,22 +172,23 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="xunit.abstractions, Version=2.0.0.0, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\xunit.abstractions.2.0.1\lib\net35\xunit.abstractions.dll</HintPath>
+      <HintPath>..\..\packages\xunit.abstractions.2.0.3\lib\net35\xunit.abstractions.dll</HintPath>
     </Reference>
-    <Reference Include="xunit.assert, Version=2.3.1.3858, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\xunit.assert.2.3.1\lib\netstandard1.1\xunit.assert.dll</HintPath>
+    <Reference Include="xunit.assert, Version=2.4.1.0, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\xunit.assert.2.4.1\lib\netstandard1.1\xunit.assert.dll</HintPath>
     </Reference>
-    <Reference Include="xunit.core, Version=2.3.1.3858, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\xunit.extensibility.core.2.3.1\lib\netstandard1.1\xunit.core.dll</HintPath>
+    <Reference Include="xunit.core, Version=2.4.1.0, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\xunit.extensibility.core.2.4.1\lib\net452\xunit.core.dll</HintPath>
     </Reference>
-    <Reference Include="xunit.execution.desktop, Version=2.3.1.3858, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\xunit.extensibility.execution.2.3.1\lib\net452\xunit.execution.desktop.dll</HintPath>
+    <Reference Include="xunit.execution.desktop, Version=2.4.1.0, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\xunit.extensibility.execution.2.4.1\lib\net452\xunit.execution.desktop.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CodeAnalyzers\ClassUnderTestFinderTests.cs" />
     <Compile Include="CodeAnalyzers\ClassUnderTestNameFinderTests.cs" />
     <Compile Include="CodeAnalyzers\ConstructorParametersExtractorTests.cs" />
+    <Compile Include="CodeAnalyzers\FieldFinderTests.cs" />
     <Compile Include="CodeAnalyzers\FieldNameGeneratorTests.cs" />
     <Compile Include="CodeAnalyzers\MemberFinderTests.cs" />
     <Compile Include="CodeAnalyzers\TestClassDetectorTests.cs" />
@@ -198,14 +200,15 @@
     <Compile Include="CodeGenerators\FieldDeclarationGeneratorTests_GetFieldDeclaration.cs" />
     <Compile Include="CodeGenerators\FieldDeclarationGeneratorTests_GetGenericFieldDeclarations.cs" />
     <Compile Include="CodeGenerators\FieldNameGeneratorTests.cs" />
-    <Compile Include="DocumentBuilderTests_WithFields.cs" />
-    <Compile Include="DocumentBuilderTests_WithSetupMethod.cs" />
+    <Compile Include="DocumentBuilderTests\DocumentBuilderTests_WithFields.cs" />
+    <Compile Include="DocumentBuilderTests\DocumentBuilderTests_WithSetupMethod.cs" />
     <Compile Include="CodeGenerators\MethodGeneratorTests_GenerateMethodWithAttribute.cs" />
     <Compile Include="CodeGenerators\UsingDirectivesGeneratorTests.cs" />
     <EmbeddedResource Include="files\ConstructorGenerator_DocumentWithTwoClasses.txt" />
     <Compile Include="Helpers\RoslynStubProviders\DocumentProvider.cs" />
     <Compile Include="Helpers\ExtensionMethods\StringExtensions.cs" />
     <Compile Include="Helpers\IO\TextFileReader.cs" />
+    <Compile Include="Helpers\RoslynStubProviders\FieldDeclarationProvider.cs" />
     <Compile Include="Helpers\RoslynStubProviders\SyntaxNodeProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Helpers\RoslynStubProviders\SyntaxGeneratorProvider.cs" />
@@ -223,7 +226,7 @@
   <ItemGroup>
     <Analyzer Include="..\..\packages\Microsoft.CodeAnalysis.Analyzers.1.1.0\analyzers\dotnet\cs\Microsoft.CodeAnalysis.Analyzers.dll" />
     <Analyzer Include="..\..\packages\Microsoft.CodeAnalysis.Analyzers.1.1.0\analyzers\dotnet\cs\Microsoft.CodeAnalysis.CSharp.Analyzers.dll" />
-    <Analyzer Include="..\..\packages\xunit.analyzers.0.7.0\analyzers\dotnet\cs\xunit.analyzers.dll" />
+    <Analyzer Include="..\..\packages\xunit.analyzers.0.10.0\analyzers\dotnet\cs\xunit.analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="files\Class_WithConstructorWithTwoParameters.txt" />
@@ -244,13 +247,13 @@
     <EmbeddedResource Include="files\FieldNameGenerator_MultipleParameters.txt" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="files\EmptyTestClass.txt" />
+    <EmbeddedResource Include="DocumentBuilderTests\files\EmptyTestClass.txt" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="files\TestClassWithSampleMethod.txt" />
+    <EmbeddedResource Include="DocumentBuilderTests\files\TestClassWithSampleMethod.txt" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="files\TestClassWithConstructor.txt" />
+    <EmbeddedResource Include="DocumentBuilderTests\files\TestClassWithConstructor.txt" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="files\Constructor.txt" />
@@ -262,13 +265,19 @@
     <EmbeddedResource Include="CodeAnalyzers\files\Class_WithSampleMethod.txt" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="files\SampleMethod.txt" />
+    <EmbeddedResource Include="DocumentBuilderTests\files\SampleMethod.txt" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="files\SampleFieldDeclarations.txt" />
+    <EmbeddedResource Include="DocumentBuilderTests\files\SampleFieldDeclarations.txt" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="files\TestClassWithSampleFields.txt" />
+    <EmbeddedResource Include="DocumentBuilderTests\files\TestClassWithSampleFields.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="CodeAnalyzers\files\Class_WithSampleField.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="DocumentBuilderTests\files\TestClassWithSampleFieldsAfterRegenerate.txt" />
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
@@ -278,9 +287,10 @@
     </PropertyGroup>
     <Error Condition="!Exists('..\..\packages\MSTest.TestAdapter.1.2.0\build\net45\MSTest.TestAdapter.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\MSTest.TestAdapter.1.2.0\build\net45\MSTest.TestAdapter.props'))" />
     <Error Condition="!Exists('..\..\packages\MSTest.TestAdapter.1.2.0\build\net45\MSTest.TestAdapter.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\MSTest.TestAdapter.1.2.0\build\net45\MSTest.TestAdapter.targets'))" />
-    <Error Condition="!Exists('..\..\packages\xunit.core.2.3.1\build\xunit.core.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\xunit.core.2.3.1\build\xunit.core.props'))" />
-    <Error Condition="!Exists('..\..\packages\xunit.core.2.3.1\build\xunit.core.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\xunit.core.2.3.1\build\xunit.core.targets'))" />
+    <Error Condition="!Exists('..\..\packages\xunit.runner.console.2.4.1\build\xunit.runner.console.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\xunit.runner.console.2.4.1\build\xunit.runner.console.props'))" />
+    <Error Condition="!Exists('..\..\packages\xunit.core.2.4.1\build\xunit.core.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\xunit.core.2.4.1\build\xunit.core.props'))" />
+    <Error Condition="!Exists('..\..\packages\xunit.core.2.4.1\build\xunit.core.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\xunit.core.2.4.1\build\xunit.core.targets'))" />
   </Target>
   <Import Project="..\..\packages\MSTest.TestAdapter.1.2.0\build\net45\MSTest.TestAdapter.targets" Condition="Exists('..\..\packages\MSTest.TestAdapter.1.2.0\build\net45\MSTest.TestAdapter.targets')" />
-  <Import Project="..\..\packages\xunit.core.2.3.1\build\xunit.core.targets" Condition="Exists('..\..\packages\xunit.core.2.3.1\build\xunit.core.targets')" />
+  <Import Project="..\..\packages\xunit.core.2.4.1\build\xunit.core.targets" Condition="Exists('..\..\packages\xunit.core.2.4.1\build\xunit.core.targets')" />
 </Project>
