--- a/targets/TestSetupGenerator.XUnitMoq/TestSetupGenerator.XUnitMoq/TestSetupGenerator.XUnitMoq.nuspec
+++ b/targets/TestSetupGenerator.XUnitMoq/TestSetupGenerator.XUnitMoq/TestSetupGenerator.XUnitMoq.nuspec
@@ -2,9 +2,9 @@
 <package >
   <metadata>
     <id>TestSetupGenerator</id>
-    <version>1.1.2</version>
+    <version>1.0.0-testnuget-3</version>
     <title>$title$</title>
-    <authors>Tuba Kaya</authors>
+    <authors>T. Kaya</authors>
     <owners>$author$</owners>
     <licenseUrl>http://somelicenseurl</licenseUrl>
     <projectUrl>http://someprojecturl</projectUrl>
@@ -20,7 +20,7 @@
     <developmentDependency>true</developmentDependency>
   </metadata>
   <files>
-    <file src="bin\Release\netstandard2.0\*.dll" target="analyzers\dotnet\cs" exclude="**\Microsoft.CodeAnalysis.*;**\System.Collections.Immutable.*;**\System.Reflection.Metadata.*;**\System.Composition.*" />
+    <file src="bin\Debug\netstandard2.0\TestSetupGenerator.CodeAnalysis.dll" target="lib\netstandard2.0\"  />
     <file src="tools\*.ps1" target="tools\" />
   </files>
 </package>
