--- a/TestSetupGenerator.IntegrationTests/packages.config
+++ b/TestSetupGenerator.IntegrationTests/packages.config
@@ -60,7 +60,7 @@
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="net461" />
   <package id="System.Xml.XPath" version="4.3.0" targetFramework="net461" />
   <package id="System.Xml.XPath.XDocument" version="4.3.0" targetFramework="net461" />
-  <package id="TestSetupGenerator" version="1.0.0-testnuget-3" targetFramework="net461" developmentDependency="true" />
+  <package id="TestSetupGenerator" version="1.0.0-fixfields-2" targetFramework="net461" developmentDependency="true" />
   <package id="xunit" version="2.3.1" targetFramework="net461" />
   <package id="xunit.abstractions" version="2.0.1" targetFramework="net461" />
   <package id="xunit.analyzers" version="0.7.0" targetFramework="net461" />
