--- a/src/TestSetupGenerator.XUnitMoq.Vsix/AutoSetup.XUnitMoq.Vsix.csproj
+++ b/src/TestSetupGenerator.XUnitMoq.Vsix/AutoSetup.XUnitMoq.Vsix.csproj
@@ -36,8 +36,8 @@
     <ProjectGuid>{D1A98751-00E1-4E1C-8712-5EBDCCA39322}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TestSetupGenerator.XUnitMoq.Vsix</RootNamespace>
-    <AssemblyName>TestSetupGenerator.XUnitMoq</AssemblyName>
+    <RootNamespace>AutoSetup.XUnitMoq.Vsix</RootNamespace>
+    <AssemblyName>AutoSetup.XUnitMoq.Vsix</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <GeneratePkgDefFile>false</GeneratePkgDefFile>
     <IncludeAssemblyInVSIXContainer>false</IncludeAssemblyInVSIXContainer>
@@ -76,9 +76,11 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\TestSetupGenerator.XUnitMoq\TestSetupGenerator.XUnitMoq.csproj">
+    <ProjectReference Include="..\TestSetupGenerator.XUnitMoq\AutoSetup.XUnitMoq.csproj">
       <Project>{8CE6A731-F52E-4408-8698-974983B71B45}</Project>
-      <Name>TestSetupGenerator.XUnitMoq</Name>
+      <Name>AutoSetup.XUnitMoq</Name>
+      <IncludeOutputGroupsInVSIX>BuiltProjectOutputGroup%3bBuiltProjectOutputGroupDependencies%3bGetCopyToOutputDirectoryItems%3bSatelliteDllsProjectOutputGroup%3b</IncludeOutputGroupsInVSIX>
+      <IncludeOutputGroupsInVSIXLocalOnly>DebugSymbolsProjectOutputGroup%3b</IncludeOutputGroupsInVSIXLocalOnly>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
