--- a/src/TestSetupGenerator.XUnitMoq/AutoSetup.XUnitMoq.csproj
+++ b/src/TestSetupGenerator.XUnitMoq/AutoSetup.XUnitMoq.csproj
@@ -5,9 +5,20 @@
     <IncludeBuildOutput>false</IncludeBuildOutput>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
-  
+
   <PropertyGroup>
-      <NuspecFile>TestSetupGenerator.XUnitMoq.nuspec</NuspecFile>
+    <NuspecFile>AutoSetup.XUnitMoq.nuspec</NuspecFile>
+    <PackageId>AutoSetup.XUnitMoq</PackageId>
+    <Version>1.0.0-rc-1</Version>
+    <Authors>T. Kaya</Authors>
+    <Product>AutoSetup</Product>
+    <Description>Generates setup method in a unit test class for a class under test</Description>
+    <Copyright>Copyright 2018</Copyright>
+    <PackageLicenseUrl>https://github.com/tukaya/autosetup/blob/master/LICENSE.txt</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/tukaya/autosetup/</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/tukaya/autosetup/</RepositoryUrl>
+    <RepositoryType>GitHub</RepositoryType>
+    <PackageTags>AutoSetup, autosetup, analyzers</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,16 +26,16 @@
     <EmbeddedResource Remove="bin\**" />
     <None Remove="bin\**" />
   </ItemGroup>
-  
+
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="2.7.0" />
     <PackageReference Include="SimpleInjector" Version="4.3.0" />
   </ItemGroup>
-  
+
   <ItemGroup>
-    <ProjectReference Include="..\TestSetupGenerator.CodeAnalysis\TestSetupGenerator.CodeAnalysis.csproj" />
+    <ProjectReference Include="..\TestSetupGenerator.CodeAnalysis\AutoSetup.CodeAnalysis.csproj" />
   </ItemGroup>
-   
+
   <ItemGroup>
     <PackageReference Update="NETStandard.Library" PrivateAssets="all" />
   </ItemGroup>
