--- a/src/TestSetupGenerator.XUnitMoq/AutoSetup.XUnitMoq.nuspec
+++ b/src/TestSetupGenerator.XUnitMoq/AutoSetup.XUnitMoq.nuspec
@@ -20,7 +20,7 @@
     <developmentDependency>true</developmentDependency>
   </metadata>
   <files>
-    <file src="bin\Debug\netstandard2.0\TestSetupGenerator.CodeAnalysis.dll" target="lib\netstandard2.0\"  />
+    <file src="bin\Debug\netstandard2.0\AutoSetup.CodeAnalysis.dll" target="lib\netstandard2.0\"  />
     <file src="tools\*.ps1" target="tools\" />
   </files>
 </package>
