--- a/src/AutoSetup/AutoSetup.csproj
+++ b/src/AutoSetup/AutoSetup.csproj
@@ -7,9 +7,9 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <NuspecFile>AutoSetup.XUnitMoq.nuspec</NuspecFile>
-    <PackageId>AutoSetup.XUnitMoq</PackageId>
-    <Version>1.0.0-rc-1</Version>
+    <NuspecFile>AutoSetup.nuspec</NuspecFile>
+    <PackageId>AutoSetup</PackageId>
+    <Version>1.0.0-rc-2</Version>
     <Authors>T. Kaya</Authors>
     <Product>AutoSetup</Product>
     <Description>Generates setup method in a unit test class for a class under test</Description>
