--- a/src/AutoSetup.Vsix/packages.config
+++ b/src/AutoSetup.Vsix/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Microsoft.VisualStudio.SDK.Analyzers" version="15.8.33" targetFramework="net461" />
   <package id="Microsoft.VisualStudio.Threading.Analyzers" version="15.8.122" targetFramework="net461" />
+  <package id="SimpleInjector" version="4.3.0" targetFramework="net461" />
 </packages>
