Adds nuget package reference to vssdk buildtools

--- a/src/AutoSetup.Vsix/packages.config
+++ b/src/AutoSetup.Vsix/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="Microsoft.VisualStudio.SDK.Analyzers" version="15.8.33" targetFramework="net461" />
   <package id="Microsoft.VisualStudio.Threading.Analyzers" version="15.8.122" targetFramework="net461" />
+  <package id="Microsoft.VSSDK.BuildTools" version="15.9.3032" targetFramework="net461" developmentDependency="true" />
   <package id="SimpleInjector" version="4.3.0" targetFramework="net461" />
 </packages>
