Push package to project and account feed in appveyor

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,3 +16,4 @@ build_script:
   - dotnet build src\autosetup\autosetup.csproj -c Release
   - dotnet pack src\autosetup\autosetup.csproj -o ..\..\AppOutput\autosetup -c Release
   - dotnet publish src\autosetup.vsix\autosetup.vsix.csproj --framework netcoreapp2.1  -o ..\..\AppOutput\autosetup.vsix -c Release
+  - appveyor PushArtifact ..\..\AppOutput\autosetup.nupkg
